Fix gardens by the bay text miss-alignment.

--- a/css/gardensbythebay.css
+++ b/css/gardensbythebay.css
@@ -114,7 +114,6 @@ body {
     color: white;
     text-align: center !important;
     font-size: calc(6vh + 6vw);
-    padding: 0 10px;
 }
 
 .title-alter-letter {
